[package]
edition = "2021"
name    = "justboot"
version = "0.1.0"

[[bin]]
name = "justboot"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "0.23.1", features = ["esp32c3", "unstable"] }
esp-println = { version = "0.13.0", features = ["esp32c3"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
panic            = "abort"
